--- a/angular.json
+++ b/angular.json
@@ -28,7 +28,10 @@
               "src/assets"
             ],
             "styles": [
-              "src/styles.scss"
+              "src/styles.scss",
+              "node_modules/primeicons/primeicons.css",
+              "node_modules/primeng/resources/primeng.css",
+              "node_modules/font-awesome/scss/font-awesome.scss"
             ],
             "scripts": []
           },
